{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 91,
  "lineage": "aa0f381c-bd09-d14f-0db2-cbcf4e3d42c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workshop0001-axwayv7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ba204df5232e729",
            "arn": "arn:aws:ec2:eu-west-2:207666252960:instance/i-0ee8cd3579fc90424",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee8cd3579fc90424",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "workshop0001-axwayv7-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0002802436ffa68e9",
            "private_dns": "ip-10-0-1-20.eu-west-2.compute.internal",
            "private_ip": "10.0.1.20",
            "public_ip": "18.169.17.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "workshop0001-axwayv7",
                  "Project": "Amplify UKI Workshop0001"
                },
                "throughput": 0,
                "volume_id": "vol-005bbc2bfbd41e3b2",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0452a1db70ecb4258"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b8633a76d2ad4ec",
            "tags": {
              "Name": "workshop0001-axwayv7",
              "Project": "Amplify UKI Workshop0001"
            },
            "tags_all": {
              "Name": "workshop0001-axwayv7",
              "Project": "Amplify UKI Workshop0001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0452a1db70ecb4258"
            ]
          },
          "dependencies": [
            "aws_security_group.workshop0001-nginx-web-facing",
            "aws_subnet.workshop0001-main",
            "aws_vpc.workshop0001-main",
            "data.aws_ami.workshop0001-axwayv7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "workshop0001-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:207666252960:internet-gateway/igw-037a9f0e9e475511d",
            "id": "igw-037a9f0e9e475511d",
            "owner_id": "207666252960",
            "tags": {
              "Name": "AxwayTechlab",
              "Project": "Amplify UKI Workshop0001"
            },
            "tags_all": {
              "Name": "AxwayTechlab",
              "Project": "Amplify UKI Workshop0001"
            },
            "vpc_id": "vpc-05c8337e06f5ec878"
          },
          "dependencies": [
            "aws_vpc.workshop0001-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "workshop0001-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0677677c0056a1913",
            "original_route_table_id": "rtb-07aacb0b4e69b7783",
            "route_table_id": "rtb-0b98fdc19d0d927d2",
            "vpc_id": "vpc-05c8337e06f5ec878"
          },
          "dependencies": [
            "aws_internet_gateway.workshop0001-gw",
            "aws_route_table.workshop0001-rt",
            "aws_vpc.workshop0001-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "workshop0001-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:207666252960:route-table/rtb-0b98fdc19d0d927d2",
            "id": "rtb-0b98fdc19d0d927d2",
            "owner_id": "207666252960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037a9f0e9e475511d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workshop0001-AxwayTechlab",
              "Project": "Amplify UKI Workshop0001"
            },
            "tags_all": {
              "Name": "workshop0001-AxwayTechlab",
              "Project": "Amplify UKI Workshop0001"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8337e06f5ec878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.workshop0001-gw",
            "aws_vpc.workshop0001-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workshop0001-nginx-web-facing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:207666252960:security-group/sg-0452a1db70ecb4258",
            "description": "Allow TLS,HTTP,SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0452a1db70ecb4258",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP - API Backend",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS higher port number",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Juice Shop",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-web-facing",
            "name_prefix": "",
            "owner_id": "207666252960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workshop0001-axwayv7",
              "Project": "Amplify UKI Workshop0001"
            },
            "tags_all": {
              "Name": "workshop0001-axwayv7",
              "Project": "Amplify UKI Workshop0001"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8337e06f5ec878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workshop0001-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workshop0001-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:207666252960:subnet/subnet-05b8633a76d2ad4ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05b8633a76d2ad4ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207666252960",
            "tags": {
              "Name": "AxwayTechlab",
              "Project": "Amplify UKI Workshop0001"
            },
            "tags_all": {
              "Name": "AxwayTechlab",
              "Project": "Amplify UKI Workshop0001"
            },
            "vpc_id": "vpc-05c8337e06f5ec878"
          },
          "dependencies": [
            "aws_vpc.workshop0001-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop0001-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:207666252960:vpc/vpc-05c8337e06f5ec878",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a71c53648e171080",
            "default_route_table_id": "rtb-07aacb0b4e69b7783",
            "default_security_group_id": "sg-059d466d1e3146ddf",
            "dhcp_options_id": "dopt-b2a8ddda",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c8337e06f5ec878",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07aacb0b4e69b7783",
            "owner_id": "207666252960",
            "tags": {
              "Name": "AxwayTechlab-workshop0001",
              "Project": "Amplify UKI Workshop0001"
            },
            "tags_all": {
              "Name": "AxwayTechlab-workshop0001",
              "Project": "Amplify UKI Workshop0001"
            }
          }
        }
      ]
    }
  ]
}